year level fix css and spacing

--- a/course_u/static/css/select_year_level.css
+++ b/course_u/static/css/select_year_level.css
@@ -4,7 +4,7 @@ main{
   background-size: cover;
   background-repeat: no-repeat;
 }
-p{
+p.select-year{
   text-align: center;
   color: rgb(228, 95, 65);
   font-family: Arial, Helvetica, sans-serif;
